created font changing button

--- a/index.html
+++ b/index.html
@@ -2,12 +2,45 @@
 <html> 
 
 <head>
-    <meta charset=utf-8/>
+
+    <!-- Adding necessary information/connecting to css doc-->
+    <title>hw-03</title>
+    <link rel="stylesheet" type="text/css" href="styles.css">
+
 </head>
 
 
 <body>
 
+    <!-- Add header for the page -->
+    <h1>hw-03: Interactive Webpage, and Marks & Channels</h1>
+
+
+    <!-- Create table w/ visualizations -->
+
+
+    <div>
+
+        <!-- Text box to provide info on functionality of button -->
+        <div id="button-text" class="gen">
+            Arial is a nice font, but...
+        </div>
+
+        <!-- Button changes font of website -->
+        <button type="button" onclick="changeFont()">Try something else?</button>
+
+    </div>
+
+
+    <!-- List acknowledgements -->
+    <h2>Acknowledgements</h2>
+    <div>
+        <ul>
+            <li>insert item here</li>
+        </ul>
+    </div>
+
+    <script src="main.js"></script>
 
 </body>
 
