--- a/index.html
+++ b/index.html
@@ -36,7 +36,11 @@
     <h2>Acknowledgements</h2>
     <div>
         <ul>
-            <li>insert item here</li>
+            <li><a href="https://www.kaggle.com/datasets/thedevastator/bot-activity-and-credibility-scores-on-social-me?resource=download">Kaggle: dataset source</a></li>
+            <li><a href="https://www.w3schools.com/jsref/event_onclick.asp">w3schools onclick Event</a></li>
+            <li><a href="https://www.w3schools.com/js/js_arrays.asp">w3schools JavaScript Arrays</a></li>
+            <li><a href="https://www.w3schools.com/js/js_if_else.asp">w3schools JavaScript Conditionals</a></li>
+            <li><a href="https://www.w3.org/Style/Examples/007/fonts.en.html">w3: List of CSS Fonts</a></li>
         </ul>
     </div>
 
