vis analysis done

--- a/index.html
+++ b/index.html
@@ -17,7 +17,74 @@
 
 
     <!-- Create table w/ visualizations -->
+    <div class="flex-container">
+        <!-- Column 1: visualizations -->
+        <div>
+            <img class="vis" src="img/vis1.png" alt="visualization1" width="400px">
+            <img class="vis" src="img/vis2.png" alt="visualization2" width="400px">
+        </div>
 
+        <!-- Column 2: visualization info -->
+        <div>
+            <div class="p1">
+                <h2>Marks</h2>
+                    <ul>
+                        <li>mark 1: area (map of U.S.)</li>
+                        <li>mark 2: line (vote count)</li>
+                        <li>mark 3: points (Maine and Nebraska legends)</li>
+                    </ul>
+                <h2>Channels</h2>
+                    <ul>
+                        <li>channel 1: color</li>
+                            <ul>
+                                <li>represents categorical attribute (R vs D)</li>
+                                <li>this is a good mapping because it is expressive and effective
+                                    by clearly showing the vote outcome</li>
+                            </ul>
+                    </ul>
+                <h2>Colormap</h2>
+                    <ul>
+                        <li>colormap categorical (red/blue)</li>
+                            <ul>
+                                <li>represents categorical attribute (R vs D)</li>
+                                <li>this is a good mapping because it is for an identity channel</li>
+                            </ul>
+                    </ul>
+            </div>
+            <p>
+                <h2>Marks</h2>
+                    <ul>
+                        <li>mark 1: points (points on graph)</li>
+                        <li>mark 2: lines (benchmark lines)</li>
+                        <li>mark 3: line (scoring value legend)</li>
+                    </ul>
+                <h2>Channels</h2>
+                    <ul>
+                        <li>chanel 1: color</li>
+                            <ul>
+                                <li>represents divergent quantitative attribute (scoring value)</li>
+                                <li>this is a good mapping because it is expressive and effective
+                                    by clearly showing the scoring value relative to average</li>
+                            </ul>
+                        <li>channel 2: position</li>
+                            <ul>
+                                <li>represents divergent quantitative attribute of launch angle
+                                    and sequential quantitative attribute of exit velocity</li>
+                                <li>this is a good mapping because it is expressive and effective
+                                    by clearly showing the launch angle and exit velocity</li>
+                            </ul>
+                    </ul>
+                <h2>Colormap</h2>
+                    <ul>
+                        <li>colormap divergent</li>
+                            <ul>
+                                <li>represents divergent quantitative attribute (scoring value)</li>
+                                <li>this is a good mapping because it is for a magnitude channel</li>
+                            </ul>
+                    </ul>
+            </p>
+        </div>
+    </div>
 
     <div>
 
