haha small mistakes, made changes

--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
         <!-- Row 1: visualization 1 -->
         <div class="row">
 
-            <div>
-                <img src="img/vis1.png" alt="visualization1" width="400px">
+            <div class="vis">
+                <img src="img/vis1.png" alt="visualization1" width=100%>
             </div>
 
-            <div>
+            <div class="text">
 
                 <h2>Marks</h2>
                     <ul>
@@ -58,11 +58,11 @@
         <!-- Row 2: visualization 2 -->
         <div class="row">
 
-            <div>
-                <img src="img/vis2.png" alt="visualization2" width="400px">
+            <div class="vis">
+                <img src="img/vis2.png" alt="visualization2" width=100%>
             </div>
 
-            <div>
+            <div class="text">
 
                 <h2>Marks</h2>
                     <ul>
@@ -102,11 +102,11 @@
         <!-- Row 3: visualization 3 -->
         <div class="row">
 
-            <div>
-                <img src="vis_create/vis3.png" alt="visualization3" width="400px">
+            <div class="vis">
+                <img src="vis_create/vis3.png" alt="visualization3" width=100%>
             </div>
 
-            <div>
+            <div class="text">
 
                 <h2>Marks</h2>
                     <ul>
